force-app/main/default/objects/Exception_Day__c/Exception_Day__c.object-meta.xml
<CustomObject>
    <label>Exception Day</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>