force-app/main/default/objects/Exception_Day__c/fields/Day_Of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_the_Week__c</fullName>
    <formula>(CASE( MOD( Exception_Date__c - DATE(1900, 1, 7), 7), 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;, &quot;Sunday&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Of the Week</label>
    <type>Text</type>
</CustomField>