force-app/main/default/objects/Exception_Day__c/fields/Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Date__c</fullName>
    <description>Holds the Date of the holiday or Saturday&apos;s details</description>
    <label>Exception Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>