force-app/main/default/objects/Exception_Day__c/fields/Slots__c.field-meta.xml
<CustomField>
    <fullName>Slots__c</fullName>
    <description>Holds max slots allowed on this working day. For holiday, default value will be considered</description>
    <label>Slots</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>