force-app/main/default/objects/Exception_Day__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Holds working day vs holiday. BTW, working day provisioning is required for only Saturday or Sunday. Not for Mon-Fri</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Working Day</fullName>
            </value>
            <value>
                <fullName>Scheduled Week</fullName>
            </value>
            <value>
                <fullName>Default Slots Per Day</fullName>
            </value>
            <value>
                <fullName>Slots Per Week Constant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>