force-app/main/default/objects/Exception_Day__c/validationRules/slots_value_must.validationRule-meta.xml
<ValidationRule>
    <fullName>slots_value_must</fullName>
    <active>true</active>
    <description>working day should always be configured with maxslots allowed. Also slots per day and slots per week.</description>
    <errorConditionFormula>( ISPICKVAL( Type__c , &quot;Working Day&quot;) 
|| 
  ISPICKVAL( Type__c , &quot;Default Slots Per Day&quot;) 
|| 
  ISPICKVAL( Type__c , &quot;Slots Per Week Constant&quot;) 
)
&amp;&amp;  ISBLANK(Slots__c)</errorConditionFormula>
    <errorMessage>Working Day Configuration must provide max slots allowed.</errorMessage>
</ValidationRule>