force-app/main/default/objects/Exception_Day__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Exception_Date__c</columns>
    <columns>Slots__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>