force-app/main/default/objects/Exception_Day__c/listViews/Default_Slots_per_day.listView-meta.xml
<ListView>
    <fullName>Default_Slots_per_day</fullName>
    <columns>NAME</columns>
    <columns>Day_Of_the_Week__c</columns>
    <columns>Exception_Date__c</columns>
    <columns>Slots__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Default Slots Per Day</value>
    </filters>
    <label>Default Slots per day</label>
</ListView>