force-app/main/default/objects/Exception_Day__c/listViews/Holidays.listView-meta.xml
<ListView>
    <fullName>Holidays</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Exception_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Holiday</value>
    </filters>
    <label>Holidays</label>
</ListView>