force-app/main/default/objects/Exception_Day__c/listViews/Max_Slots_per_week_Constant.listView-meta.xml
<ListView>
    <fullName>Max_Slots_per_week_Constant</fullName>
    <columns>NAME</columns>
    <columns>Day_Of_the_Week__c</columns>
    <columns>Exception_Date__c</columns>
    <columns>Slots__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Slots Per Week Constant</value>
    </filters>
    <label>Max Slots per week Constant</label>
</ListView>