force-app/main/default/objects/Exception_Day__c/listViews/Scheduled_Weeks.listView-meta.xml
<ListView>
    <fullName>Scheduled_Weeks</fullName>
    <columns>NAME</columns>
    <columns>Day_Of_the_Week__c</columns>
    <columns>Exception_Date__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Scheduled Week</value>
    </filters>
    <label>Scheduled Weeks</label>
</ListView>