force-app/main/default/objects/Exception_Day__c/listViews/Working_Days.listView-meta.xml
<ListView>
    <fullName>Working_Days</fullName>
    <columns>NAME</columns>
    <columns>Day_Of_the_Week__c</columns>
    <columns>Exception_Date__c</columns>
    <columns>Slots__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Working Day</value>
    </filters>
    <label>Working Days</label>
</ListView>